syntax = "proto3";
package pb;

option go_package = "internal/pb";

message blank{}

message Category {
  string id = 1;
  string name = 2;
  string description = 3;
}

message CategoryList {
  repeated Category categories = 1;
}

message CreateCategoryRequest {
  string name = 1;
  string description = 2;
}

message GetCategoryByIdRequest {
  string id = 1;
}

service CategoryService {
  rpc Create(CreateCategoryRequest) returns (Category) {}
  rpc List(blank) returns (CategoryList) {}
  rpc GetById(GetCategoryByIdRequest) returns (Category) {}
  rpc CreateCategoryStream(stream CreateCategoryRequest) returns (CategoryList) {}
  rpc CreateBidirectionalCategoryStream(stream CreateCategoryRequest) returns (stream Category) {}
}